crates/rspack_error/tests/fixtures/js_resolved_error/fixtures__js_resolved_error.snap
---
source: crates/rspack_error/tests/fixtures.rs
assertion_line: 38
expression: js_resolved_error
---
error[internal]: Resolve error
  ┌─ tests/fixtures/js_resolved_error/index.js:2:1
  │
2 │ import './result.svg'
  │ ^^^^^^^^^^^^^^^^^^^^^ Failed to resolve ./result.svg


